<resources>
    <string name="app_name">LogicMed</string>
    <string name="splashScreenTitle">Transforming\nHealthcare</string>
    <string name="mainImageDesc">Main Image</string>
    <string name="subImageDesc">Sub Image</string>
    <string name="splashScreenSubTitle">The purpose of life is to\nfind joy and fulfillment.</string>
    <string name="termsAndPrivacyText">Slide to accept Terms &amp; Privacy.</string>
    <string name="sliderTickMarkDesc">Slider Tick Mark</string>
    <string name="sliderText">Get Started</string>
    <string name="onBoardScreenTitle">Find your angle</string>
    <string name="tagDesc">Tag</string>
    <string name="titleImgDesc">Title Image</string>
    <string name="smileyTagText">20k</string>
    <string name="badgeTagText">#4</string>
    <string name="doctorTagText">4th</string>
    <string name="signupFragTitle">Sign up</string>
    <string name="nameHint">Full Name</string>
    <string name="emailHint">Email</string>
    <string name="roleHint">Role</string>
    <string name="locationHint">Location</string>
    <string name="passwordHint">Password</string>
    <string name="cPasswordHint">Confirm Password</string>
    <string name="loginFragTitle">Log in</string>
    <string name="authTitle">Let Us Know Who are You?</string>
    <string name="doctorDataTitle">Enter your Data Here!</string>
    <string name="doctorDayOfDutyTitle">Select your available days</string>
    <string name="doctorCategoriesTitle">Select your categories</string>
    <string name="submitBtnText">Submit</string>
    <string name="homeFrag">Home</string>
    <string name="searchFrag">Search</string>
    <string name="chatFrag">Chat</string>
    <string name="aiChatFrag">AI</string>
    <string name="profileImgDesc">Profile Image</string>
    <string name="openDrawerString">Open</string>
    <string name="closeDrawerString">Close</string>
    <string name="setupProfileTitle">Give us some more details about you</string>
    <string name="uploadButton">Upload Image</string>
    <string name="skipBtnText">Skip</string>
    <string name="docFeeHind">Enter the Appointment Fee</string>
    <string name="toolBarTitle">Step Toward Healthy Life</string>
    <string name="logoutBtnDesc">Logout</string>
    <string name="decButton">Decrement</string>
    <string name="incButton">Increment</string>
    <string name="upcomingAppointmentWithTitle">Upcoming Appointments</string>
    <string name="noUpcomingAppointment">No Upcoming Appointment</string>
    <string name="searchBarHint">Search Here</string>
    <string name="doctorPicDesc">Doctor Picture</string>
    <string name="clickForMoreDetail">Click For More Detail</string>
    <string name="docCategoriesTitle">Doctor\'s Specialities: </string>
    <string name="docTimingsTitle">Doctor\'s Timings (In Week): </string>
    <string name="bookAppointmentText">Book an Appointment</string>
    <string name="backArrow">Go Back</string>
    <string name="startConversation">Start Conversation</string>
    <string name="typeMsgHint">Start Typing Here</string>
    <string name="messageImage">Image Message</string>
    <string name="feeHint">Fee:</string>
    <string name="timeSlotHint">Appointment Slot (Min):</string>
    <string name="selectDate">Select Date:</string>
    <string name="clickToChangeStatus">Click To Change Status\n</string>
    <string name="aiChatTitle">Dr. LogicMed</string>
    <string name="sendButton">Send Message</string>
    <string name="drFeedback">Your Feedback</string>
    <string name="allAppointmentsTitle">All Appointments</string>
</resources>