<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?frag_bg"
    tools:context=".ProfileSetupFragment">
    <TextView
        android:id="@+id/setup_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setupProfileTitle"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="viewStart"
        android:layout_marginBottom="20dp"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/setup_profile_profile_img_section"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="50dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="100dp"
        app:cardPreventCornerOverlap="false"
        android:layout_marginBottom="20dp"
        >
        <ImageView
            android:id="@+id/setup_profile_profile_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profileImgDesc"
            android:src="@drawable/avatar"
            />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/setup_profile_upload_btn_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        >
        <ImageButton
            android:id="@+id/setup_profile_upload_image_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/upload_button_bg"
            android:src="@drawable/upload"
            android:contentDescription="@string/uploadButton"
            android:padding="20dp"
            android:layout_marginEnd="20dp"
            />
        <ImageButton
            android:id="@+id/setup_profile_camera_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/camera_upload_bg"
            android:src="@drawable/camera"
            android:contentDescription="@string/uploadButton"
            android:padding="20dp"
            />

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/setup_profile_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitBtnText"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/light_nav"
        />
</LinearLayout>