<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AIActivity">
    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/ai_chat_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <RelativeLayout
        android:id="@+id/ai_chat_header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/toolbar_bg">

        <ImageButton
            android:id="@+id/ai_chat_back_arrow"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_back_icon"
            android:contentDescription="@string/backArrow"
            android:background="@drawable/ripple_subtle"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ai_icon"
            android:contentDescription="@string/profileImgDesc"
            android:layout_toEndOf="@id/ai_chat_back_arrow"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/TextAppearance.LogicMed.Body"
            android:text="@string/aiChatTitle"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_centerInParent="true"
            android:gravity="center"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ai_chat_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/ai_chat_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ai_chat_input_section"
        app:stackFromEnd="true"
        android:paddingHorizontal="8dp"/>

    <LinearLayout
        android:id="@+id/ai_chat_input_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/chat_input_bg">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.LogicMed.TextInputLayout"
            app:hintEnabled="false"
            android:layout_marginHorizontal="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ai_chat_message_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/typeMsgHint"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_muted"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/ai_chat_send_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/check_icon"
            android:contentDescription="@string/sendButton"
            android:background="@drawable/upload_button_bg"
            android:padding="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>