<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".OnBoardScreen">

    <LinearLayout
        android:id="@+id/on_board_header_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/on_board_main_section"
        app:layout_constraintVertical_chainStyle="spread"
        android:gravity="center_horizontal"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onBoardScreenTitle"
            style="@style/TextAppearance.LogicMed.Display"
            android:textAlignment="center"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/on_board_with_login_header_icon"
            android:contentDescription="@string/titleImgDesc"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/on_board_main_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/on_board_header_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/on_board_tags_section">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/on_board_with_login_main_bg2"
            android:contentDescription="@string/subImageDesc"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/on_board_with_login_bg1"
            android:contentDescription="@string/subImageDesc"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/on_board_with_login_main"
            android:contentDescription="@string/mainImageDesc"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/on_board_tags_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/on_board_main_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/on_board_slider_section">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/on_board_smiley_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="14dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/on_board_badge_tag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:cardBackgroundColor="@color/surface_card"
            app:strokeWidth="1dp"
            app:strokeColor="@color/border_subtle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/teal_badge_bg"
                android:text="@string/smileyTagText"
                android:textColor="@color/accent_teal"
                app:drawableTopCompat="@drawable/smile_icon"
                android:paddingHorizontal="28dp"
                android:paddingVertical="18dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/on_board_badge_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="14dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toEndOf="@id/on_board_smiley_tag"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/on_board_doctor_tag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardBackgroundColor="@color/surface_card"
            app:strokeWidth="1dp"
            app:strokeColor="@color/border_subtle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="28dp"
                android:paddingVertical="18dp"
                android:text="@string/badgeTagText"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/accent_amber"
                app:drawableTopCompat="@drawable/badge_icon"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/on_board_doctor_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="14dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toEndOf="@id/on_board_badge_tag"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardBackgroundColor="@color/surface_card"
            app:strokeWidth="1dp"
            app:strokeColor="@color/border_subtle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="28dp"
                android:paddingVertical="18dp"
                android:text="@string/doctorTagText"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/accent_purple"
                app:drawableTopCompat="@drawable/stethoscope_icon"/>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/on_board_slider_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/on_board_tags_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.example.logicmed.SlideToStart
            android:id="@+id/on_board_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/on_board_screen_slider_bg"
            app:slider_text="@string/sliderText"
            app:slider_text_color="@color/text_primary"
            app:slider_cover_color="@color/surface_elevated"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>