<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetupProfileActivity">
    <ProgressBar
        android:id="@+id/setup_profile_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/setup_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setupProfileTitle"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="viewStart"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/setup_profile_profile_img_section"
        app:layout_constraintVertical_chainStyle="spread"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/setup_profile_profile_img_section"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/setup_profile_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/setup_profile_upload_btn_section"
        android:elevation="50dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="100dp"
        app:cardPreventCornerOverlap="false"
        >
        <ImageView
            android:id="@+id/setup_profile_profile_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profileImgDesc"
            android:src="@drawable/avatar"
            />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/setup_profile_upload_btn_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/setup_profile_profile_img_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/setup_profile_final_btn_section"
        >
        <ImageButton
            android:id="@+id/setup_profile_upload_image_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/upload_button_bg"
            android:src="@drawable/upload"
            android:contentDescription="@string/uploadButton"
            android:padding="20dp"
            android:layout_marginEnd="20dp"
            />
        <ImageButton
            android:id="@+id/setup_profile_camera_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/camera_upload_bg"
            android:src="@drawable/camera"
            android:contentDescription="@string/uploadButton"
            android:padding="20dp"
            />

    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setup_profile_doc_fee_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/setup_profile_upload_btn_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/setup_profile_final_btn_section"
        android:layout_marginHorizontal="20dp"
        android:visibility="gone"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setup_profile_doc_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/docFeeHind"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/setup_profile_final_btn_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/setup_profile_doc_fee_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_profile_skip_btn"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/skipBtnText"
            app:cornerRadius="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintTop_toBottomOf="@id/setup_profile_profile_img_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_profile_submit_btn"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="@string/submitBtnText"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/light_nav"
            app:layout_constraintTop_toBottomOf="@id/setup_profile_profile_img_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
